# kew

./: .gitignore  .prettierrc.mjs  .swcrc  Cargo.toml  Justfile  Procfile  README.md  book.toml  index.html  package-lock.json  package.json  rollup.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: book.yml
crates/base/: Cargo.toml
crates/base/src/: lib.rs  model.rs
crates/base/src/model/: item.rs  queue.rs
crates/fifo/: Cargo.toml  sim.rs
crates/kew/: Cargo.toml  accept_queue.rs  p2p.rs  sim.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
kew/: Cargo.toml
kew-book/: Cargo.toml
kew-book-api/: Cargo.toml
kew-book-api/src/: figure.rs  input.rs  lib.rs  offline.rs  online.rs  table.rs
kew-book-macros/: Cargo.toml
kew-book-macros/src/: lib.rs
kew-book/src/: aqm.md  aqm.rs  backpressure.md  backpressure.rs  bbr.md  bbr.rs  cake.md  cake.rs  capacity_management.rs  cca.md  cca.rs  codel.md  codel.rs  cubic.md  cubic.rs  fifo.md  fifo.rs  lib.rs  lifo.md  lifo.rs  prefer_new.md  prefer_new.rs  prefer_old.md  prefer_old.rs  priority.md  priority.rs  round_robin.md  round_robin.rs  service_disciplines.md  service_disciplines.rs  shortest_job_first.md  shortest_job_first.rs  unbounded.md  unbounded.rs
kew-wasm/: Cargo.toml
kew-wasm/src/: lib.rs
kew/src/: book.rs  channel.rs  lib.rs  parser.rs  ring_deque.rs  sim.rs  writer.rs
kew/src/book/: api.rs  charts.rs  cytoscape.js  fifo.rs  introduction.rs  priority.rs  summary.rs  vega.js
kew/src/book/api/: cytoscape.rs  vega.rs
kew/src/book/charts/: count.json  latency.json  line.json
lib/: index.js  mdbook.js
lib/cytoscape/: browser.js  index.js  mdbook.js
lib/vega/: browser.js  mdbook.js
plugins/: pages.ts  static-crate.ts
src/: App.tsx  book.rs  ext.rs  main.rs  parser.rs  ring_deque.rs  vite-env.d.ts
src/book/: fifo.rs
src/book/charts/: line.json
src/chapters/01_Introduction/: coffee.mdx  content.mdx  index.tsx
src/chapters/02_Capacity_Management/: content.mdx  index.tsx
src/chapters/02_Queueing_Basics/: coffee.mdx  index.tsx
src/chapters/03_Service_Disciplines/: content.mdx
src/chapters/03_Simple_Queue_Models/: coffee.mdx
src/chapters/04_Active_Queue_Management/: content.mdx
src/chapters/04_Multi-Server_Queues/: coffee.mdx
src/chapters/05_Congestion_Control_Algorithms/: content.mdx
src/chapters/05_Priority_Queues/: hospital.mdx  index.tsx
src/chapters/06_FIFO_and_LIFO_Queues/: warehouse.mdx
src/chapters/06_Playground/: index.tsx
src/components/: Breadcrumb.tsx  KeyBindings.tsx  Link.tsx  Math.tsx  Nav.tsx  Page.tsx  Player.tsx  Plot.client.jsx  Plot.server.jsx  Plot.tsx  Queue.tsx  Slider.tsx  Toggle.tsx  content.html.tsx  content.md.tsx  content.tsx  routes.tsx  use-interval.ts  use-lagging-value.ts
src/data/: model.ts  sim.ts
src/targets/: md.tsx  static.tsx  web.tsx
src/targets/web/: index.css
tmpl-kew-book/: README.md  observablehq.config.js  package.json
tmpl-kew-book/lib/: kew-md.js  pages.js
tmpl-kew-book/src/: aqm.md  bbr.md  cake.md  capacity-management.md  cca.md  codel.md  cubic.md  fifo.md.kew  index.md  lifo.md  priority.md  round-robin.md  service-disciplines.md  shortest-job-first.md
xtask/: Cargo.toml
xtask/src/: compile.rs  main.rs
(+15 files in other folders)
