[workspace]
members = [
    "kew",
    "kew-book",
    "kew-book-api",
    "kew-book-macros",
    "kew-wasm",
    "xtask",
]
resolver = "2"

[workspace.dependencies]
arrow-ipc = { version = "53", default-features = false }
bach = { git = "https://github.com/camshaft/bach" }
# bach = { path = "../bach/bach" }
datafusion = { version = "43", default-features = false }
kew = { version = "0.1", path = "./kew" }
kew-book-api = { version = "0.1", path = "./kew-book-api" }
kew-book-macros = { version = "0.1", path = "./kew-book-macros" }
wasm-bindgen = "0.2"