[package]
name = "kew-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
parquet = ["kew/parquet"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
kew = { path = "../kew", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
serde_with = "3"
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
