[package]
name = "base"
version = "0.1.0"
edition = "2024"

[features]
test = ["dep:wasm-bindgen-test"]

[dependencies]
bach = { workspace = true, features = ["net"] }
console_error_panic_hook = "0.1"
getrandom = { version = "*", features = ["wasm_js"] }
wasm-bindgen.workspace = true
wasm-bindgen-test = { version = "0.3", optional = true }
